fix logo & link color on safari

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,7 +37,7 @@ i {
 /* LINKS */
 a {
   text-decoration: none;
-  color: #302e2e;
+  color: inherit;
 }
 a:visited {
   color: inherit;
